--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="cn">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CAR</title>
     <link rel="stylesheet" href="index.css">
 </head>
-
 <body>
     <div class="container">
-        <img src="car.jpg" alt="Car" id="car-image">
-        <div class="header">
-            <div class="info">
+        <div class="car-section">
+            <img src="car.jpg" alt="Car" id="car-image">
+        </div>
+        <div class="info-section">
+            <div class="info-container">
                 <p>电压：<span id="voltage">未连接</span></p>
                 <p>温度：<span id="temperature">未连接</span></p>
                 <p>湿度：<span id="humidity">未连接</span></p>
