--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 </head>
 <body>
     <div class="container">
-        <div class="car-section">
-            <img src="car.jpg" alt="Car" id="car-image">
-        </div>
-        <div class="info-section">
-            <div class="info-container">
-                <p>电压：<span id="voltage">未连接</span></p>
-                <p>温度：<span id="temperature">未连接</span></p>
-                <p>湿度：<span id="humidity">未连接</span></p>
+        <img src="car.jpg" alt="Car" id="car-image">
+        <div class="content-area"> <!-- 新增内容区域 -->
+            <div class="info-container"> <!-- 信息显示容器 -->
+                <div class="info">
+                    <p>电压：<span id="voltage">未连接</span></p>
+                    <p>温度：<span id="temperature">未连接</span></p>
+                    <p>湿度：<span id="humidity">未连接</span></p>
+                </div>
             </div>
-            <div class="buttons">
+            <div class="button-area"> <!-- 按钮显示区域 -->
                 <button class="button" id="lock-button" disabled>解锁</button>
                 <button class="button" id="start-button" disabled>启动</button>
                 <button class="button" id="trunk-button" disabled>打开尾箱</button>
