--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 <body>
     <div class="container">
         <img src="car.jpg" alt="Car" id="car-image">
-        <div class="content-area"> <!-- 新增内容区域 -->
-            <div class="info-container"> <!-- 信息显示容器 -->
+        <div class="content-area"> 
+            <div class="info-container"> 
                 <div class="info">
                     <p>电压：<span id="voltage">未连接</span></p>
                     <p>温度：<span id="temperature">未连接</span></p>
                     <p>湿度：<span id="humidity">未连接</span></p>
                 </div>
             </div>
-            <div class="button-area"> <!-- 按钮显示区域 -->
+            <div class="button-area"> 
                 <button class="button" id="lock-button" disabled>解锁</button>
-                <button class="button" id="start-button" disabled>启动</button>
+                <button class="button" id="start-button" disabled>启动引擎</button>
                 <button class="button" id="trunk-button" disabled>打开尾箱</button>
-                <button class="button" id="find-car-button" disabled>打开寻车</button>
+                <button class="button" id="find-car-button" disabled>寻车</button>
                 <button class="button" id="window-button" disabled>开窗</button>
             </div>
         </div>
