--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="cn">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CAR</title>
     <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
     <div class="container">
-        <img src="car.jpg" alt="Car" id="car-image">
-        <div class="content-area"> 
-            <div class="info-container"> 
+        <img src="" alt="Car" id="car-image">
+        <div class="content-area">
+            <div class="info-container">
                 <div class="info">
                     <p>电压：<span id="voltage">未连接</span></p>
                     <p>温度：<span id="temperature">未连接</span></p>
                     <p>湿度：<span id="humidity">未连接</span></p>
                 </div>
             </div>
-            <div class="button-area"> 
+            <div class="button-area">
                 <button class="button" id="lock-button" disabled>解锁</button>
                 <button class="button" id="start-button" disabled>启动引擎</button>
                 <button class="button" id="trunk-button" disabled>打开尾箱</button>
@@ -29,4 +31,5 @@
     <div class="offline-overlay" id="offline-overlay">设备离线</div>
     <script src="index.js"></script>
 </body>
-</html>
+
+</html>    
