--- a/config.html
+++ b/config.html
@@ -70,6 +70,7 @@
             <h2>修改设备</h2>
             <label for="editDeviceImage">设备图片：</label>
             <input type="file" id="editDeviceImage" accept="image/*">
+            <img id="editDeviceImagePreview" style="display: none; max-width: 100px; max-height: 100px;" />
             <label for="editDeviceName">设备名称：</label>
             <input type="text" id="editDeviceName" placeholder="设备名称">
             <label for="editDeviceId">设备ID：</label>
