--- a/config.html
+++ b/config.html
@@ -20,6 +20,7 @@
             <h2>添加设备</h2>
             <label for="deviceImage">设备图片：</label>
             <input type="file" id="deviceImage" accept="image/*">
+            <img id="addDeviceImagePreview" style="display: none; max-width: 100px; max-height: 100px;" />
             <label for="deviceName">设备名称：</label>
             <input type="text" id="deviceName" placeholder="设备名称">
             <label for="deviceId">设备ID：</label>
