--- a/config.html
+++ b/config.html
@@ -6,100 +6,97 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Config</title>
     <link rel="stylesheet" href="config.css">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
 </head>
 
-<body class="bg-black text-white">
+<body>
     <ul id="deviceList"></ul>
-    <button id="addDeviceBtn" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">+添加设备</button>
-    <button id="userConfigBtn" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded">用户配置</button>
+    <button id="addDeviceBtn">+添加设备</button>
+    <button id="userConfigBtn">用户配置</button>
 
     <!-- 添加设备弹窗 -->
     <div id="addDeviceModal" class="modal">
-        <div class="modal-content bg-gray-800 text-white p-4 rounded">
-            <span class="close text-white" id="closeAddDeviceModal">&times;</span>
-            <h2 class="text-xl font-bold mb-4">添加设备</h2>
-            <label for="deviceImage" class="block mb-2">设备图片：</label>
-            <input type="file" id="deviceImage" accept="image/*" onchange="previewImage(this, 'addDeviceImagePreview')">
-            <img id="addDeviceImagePreview" class="mt-2 max-w-xs" src="" alt="设备图片预览">
-            <label for="deviceName" class="block mb-2">设备名称：</label>
-            <input type="text" id="deviceName" placeholder="设备名称" class="w-full p-2 mb-4 border border-gray-600 rounded">
-            <label for="deviceId" class="block mb-2">设备ID：</label>
-            <input type="text" id="deviceId" placeholder="设备ID" class="w-full p-2 mb-4 border border-gray-600 rounded">
-            <label for="deviceKey" class="block mb-2">设备Key：</label>
-            <input type="text" id="deviceKey" placeholder="设备Key" class="w-full p-2 mb-4 border border-gray-600 rounded">
-            <label for="lockSignalValue" class="block mb-2">锁定信号值：</label>
-            <input type="text" id="lockSignalValue" placeholder="锁定信号值" class="w-full p-2 mb-4 border border-gray-600 rounded">
-            <label for="voltageDataInterface" class="block mb-2">电压数据接口：</label>
-            <input type="text" id="voltageDataInterface" placeholder="电压数据接口" class="w-full p-2 mb-4 border border-gray-600 rounded">
-            <label for="temperatureDataInterface" class="block mb-2">温度数据接口：</label>
-            <input type="text" id="temperatureDataInterface" placeholder="温度数据接口" class="w-full p-2 mb-4 border border-gray-600 rounded">
-            <label for="humidityDataInterface" class="block mb-2">湿度数据接口：</label>
-            <input type="text" id="humidityDataInterface" placeholder="湿度数据接口" class="w-full p-2 mb-4 border border-gray-600 rounded">
-            <label for="lockDataInterface" class="block mb-2">锁定数据接口：</label>
-            <input type="text" id="lockDataInterface" placeholder="锁定数据接口" class="w-full p-2 mb-4 border border-gray-600 rounded">
-            <label for="startDataInterface" class="block mb-2">启动数据接口：</label>
-            <input type="text" id="startDataInterface" placeholder="启动数据接口" class="w-full p-2 mb-4 border border-gray-600 rounded">
-            <label for="windowDataInterface" class="block mb-2">车窗数据接口：</label>
-            <input type="text" id="windowDataInterface" placeholder="车窗数据接口" class="w-full p-2 mb-4 border border-gray-600 rounded">
-            <button id="addDeviceConfirmBtn" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">确定</button>
-            <button id="addDeviceCancelBtn" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded">取消</button>
+        <div class="modal-content">
+            <span class="close" id="closeAddDeviceModal">&times;</span>
+            <h2>添加设备</h2>
+            <label for="deviceImage">设备图片：</label>
+            <input type="file" id="deviceImage" accept="image/*">
+            <label for="deviceName">设备名称：</label>
+            <input type="text" id="deviceName" placeholder="设备名称">
+            <label for="deviceId">设备 ID：</label>
+            <input type="text" id="deviceId" placeholder="设备 ID">
+            <label for="deviceKey">设备 Key：</label>
+            <input type="text" id="deviceKey" placeholder="设备 Key">
+            <label for="lockSignalValue">锁定信号值：</label>
+            <input type="text" id="lockSignalValue" placeholder="锁定信号值">
+            <label for="voltageDataInterface">电压数据接口：</label>
+            <input type="text" id="voltageDataInterface" placeholder="电压数据接口">
+            <label for="temperatureDataInterface">温度数据接口：</label>
+            <input type="text" id="temperatureDataInterface" placeholder="温度数据接口">
+            <label for="humidityDataInterface">湿度数据接口：</label>
+            <input type="text" id="humidityDataInterface" placeholder="湿度数据接口">
+            <label for="lockDataInterface">锁定数据接口：</label>
+            <input type="text" id="lockDataInterface" placeholder="锁定数据接口">
+            <label for="startDataInterface">启动数据接口：</label>
+            <input type="text" id="startDataInterface" placeholder="启动数据接口">
+            <label for="windowDataInterface">车窗数据接口：</label>
+            <input type="text" id="windowDataInterface" placeholder="车窗数据接口">
+            <button id="addDeviceConfirmBtn">确定</button>
+            <button id="addDeviceCancelBtn">取消</button>
         </div>
     </div>
 
     <!-- 用户配置弹窗 -->
     <div id="userConfigModal" class="modal">
-        <div class="modal-content bg-gray-800 text-white p-4 rounded">
-            <span class="close text-white" id="closeUserConfigModal">&times;</span>
-            <h2 class="text-xl font-bold mb-4">用户配置</h2>
-            <label for="clientId" class="block mb-2">用户ID：</label>
-            <input type="text" id="clientId" placeholder="用户ID" class="w-full p-2 mb-4 border border-gray-600 rounded">
-            <label for="clientSecret" class="block mb-2">用户Key：</label>
-            <input type="text" id="clientSecret" placeholder="用户Key" class="w-full p-2 mb-4 border border-gray-600 rounded">
-            <label for="userName" class="block mb-2">应用ID：</label>
-            <input type="text" id="userName" placeholder="应用ID" class="w-full p-2 mb-4 border border-gray-600 rounded">
-            <label for="userPassword" class="block mb-2">应用Key：</label>
-            <input type="text" id="userPassword" placeholder="应用Key" class="w-full p-2 mb-4 border border-gray-600 rounded">
-            <button id="userConfigConfirmBtn" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">确定</button>
-            <button id="userConfigCancelBtn" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded">取消</button>
+        <div class="modal-content">
+            <span class="close" id="closeUserConfigModal">&times;</span>
+            <h2>用户配置</h2>
+            <label for="clientId">用户 ID：</label>
+            <input type="text" id="clientId" placeholder="用户 ID">
+            <label for="clientSecret">用户 Key：</label>
+            <input type="text" id="clientSecret" placeholder="用户 Key">
+            <label for="userName">应用 ID：</label>
+            <input type="text" id="userName" placeholder="应用 ID">
+            <label for="userPassword">应用 Key：</label>
+            <input type="text" id="userPassword" placeholder="应用 Key">
+            <button id="userConfigConfirmBtn">确定</button>
+            <button id="userConfigCancelBtn">取消</button>
         </div>
     </div>
 
     <!-- 修改设备弹窗 -->
     <div id="editDeviceModal" class="modal">
-        <div class="modal-content bg-gray-800 text-white p-4 rounded">
-            <span class="close text-white" id="closeEditDeviceModal">&times;</span>
-            <h2 class="text-xl font-bold mb-4">修改设备</h2>
-            <label for="editDeviceImage" class="block mb-2">设备图片：</label>
-            <input type="file" id="editDeviceImage" accept="image/*" onchange="previewImage(this, 'editDeviceImagePreview')">
-            <img id="editDeviceImagePreview" class="mt-2 max-w-xs" src="" alt="设备图片预览">
-            <label for="editDeviceName" class="block mb-2">设备名称：</label>
-            <input type="text" id="editDeviceName" placeholder="设备名称" class="w-full p-2 mb-4 border border-gray-600 rounded">
-            <label for="editDeviceId" class="block mb-2">设备ID：</label>
-            <input type="text" id="editDeviceId" placeholder="设备ID" class="w-full p-2 mb-4 border border-gray-600 rounded">
-            <label for="editDeviceKey" class="block mb-2">设备Key：</label>
-            <input type="text" id="editDeviceKey" placeholder="设备Key" class="w-full p-2 mb-4 border border-gray-600 rounded">
-            <label for="editLockSignalValue" class="block mb-2">锁定信号值：</label>
-            <input type="text" id="editLockSignalValue" placeholder="锁定信号值" class="w-full p-2 mb-4 border border-gray-600 rounded">
-            <label for="editVoltageDataInterface" class="block mb-2">电压数据接口：</label>
-            <input type="text" id="editVoltageDataInterface" placeholder="电压数据接口" class="w-full p-2 mb-4 border border-gray-600 rounded">
-            <label for="editTemperatureDataInterface" class="block mb-2">温度数据接口：</label>
-            <input type="text" id="editTemperatureDataInterface" placeholder="温度数据接口" class="w-full p-2 mb-4 border border-gray-600 rounded">
-            <label for="editHumidityDataInterface" class="block mb-2">湿度数据接口：</label>
-            <input type="text" id="editHumidityDataInterface" placeholder="湿度数据接口" class="w-full p-2 mb-4 border border-gray-600 rounded">
-            <label for="editLockDataInterface" class="block mb-2">锁定数据接口：</label>
-            <input type="text" id="editLockDataInterface" placeholder="锁定数据接口" class="w-full p-2 mb-4 border border-gray-600 rounded">
-            <label for="editStartDataInterface" class="block mb-2">启动数据接口：</label>
-            <input type="text" id="editStartDataInterface" placeholder="启动数据接口" class="w-full p-2 mb-4 border border-gray-600 rounded">
-            <label for="editWindowDataInterface" class="block mb-2">车窗数据接口：</label>
-            <input type="text" id="editWindowDataInterface" placeholder="车窗数据接口" class="w-full p-2 mb-4 border border-gray-600 rounded">
-            <button id="editDeviceConfirmBtn" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">确定</button>
-            <button id="editDeviceCancelBtn" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded">取消</button>
+        <div class="modal-content">
+            <span class="close" id="closeEditDeviceModal">&times;</span>
+            <h2>修改设备</h2>
+            <label for="editDeviceImage">设备图片：</label>
+            <input type="file" id="editDeviceImage" accept="image/*">
+            <label for="editDeviceName">设备名称：</label>
+            <input type="text" id="editDeviceName" placeholder="设备名称">
+            <label for="editDeviceId">设备 ID：</label>
+            <input type="text" id="editDeviceId" placeholder="设备 ID">
+            <label for="editDeviceKey">设备 Key：</label>
+            <input type="text" id="editDeviceKey" placeholder="设备 Key">
+            <label for="editLockSignalValue">锁定信号值：</label>
+            <input type="text" id="editLockSignalValue" placeholder="锁定信号值">
+            <label for="editVoltageDataInterface">电压数据接口：</label>
+            <input type="text" id="editVoltageDataInterface" placeholder="电压数据接口">
+            <label for="editTemperatureDataInterface">温度数据接口：</label>
+            <input type="text" id="editTemperatureDataInterface" placeholder="温度数据接口">
+            <label for="editHumidityDataInterface">湿度数据接口：</label>
+            <input type="text" id="editHumidityDataInterface" placeholder="湿度数据接口">
+            <label for="editLockDataInterface">锁定数据接口：</label>
+            <input type="text" id="editLockDataInterface" placeholder="锁定数据接口">
+            <label for="editStartDataInterface">启动数据接口：</label>
+            <input type="text" id="editStartDataInterface" placeholder="启动数据接口">
+            <label for="editWindowDataInterface">车窗数据接口：</label>
+            <input type="text" id="editWindowDataInterface" placeholder="车窗数据接口">
+            <button id="editDeviceConfirmBtn">确定</button>
+            <button id="editDeviceCancelBtn">取消</button>
         </div>
     </div>
 
     <script src="config.js"></script>
 </body>
 
-</html>    
+</html>
+    
