--- a/config.html
+++ b/config.html
@@ -51,14 +51,14 @@
         <div class="modal-content">
             <span class="close" id="closeUserConfigModal">&times;</span>
             <h2>用户配置</h2>
-            <label for="clientId">用户ID：</label>
-            <input type="text" id="clientId" placeholder="用户ID">
-            <label for="clientSecret">用户Key：</label>
-            <input type="text" id="clientSecret" placeholder="用户Key">
-            <label for="userName">应用ID：</label>
-            <input type="text" id="userName" placeholder="应用ID">
-            <label for="userPassword">应用Key：</label>
-            <input type="text" id="userPassword" placeholder="应用Key">
+            <label for="userName">用户ID：</label>
+            <input type="text" id="userName" placeholder="用户ID">
+            <label for="userPassword">用户Key：</label>
+            <input type="text" id="userPassword" placeholder="用户Key">
+            <label for="clientId">应用ID：</label>
+            <input type="text" id="clientId" placeholder="应用ID">
+            <label for="clientSecret">应用Key：</label>
+            <input type="text" id="clientSecret" placeholder="应用Key">
             <button id="userConfigConfirmBtn">确定</button>
             <button id="userConfigCancelBtn">取消</button>
         </div>
