--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="content-area">
             <div class="info-container">
                 <div class="info">
-                    <p id="device-name" style="font-size: 1.2em;"></p> <!-- 新增显示设备名称的元素 -->
+                    <p id="device-name" style="font-size: 1.2em;"></p>
                     <p>电压：<span id="voltage">未连接</span></p>
                     <p>温度：<span id="temperature">未连接</span></p>
                     <p>湿度：<span id="humidity">未连接</span></p>
@@ -29,8 +29,7 @@
             </div>
         </div>
     </div>
-    <div class="offline-overlay" id="offline-overlay">设备离线</div>
     <script src="index.js"></script>
 </body>
 
-</html>    
+</html>        
