--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                 </div>
             </div>
             <div class="button-area">
-                <button class="button" id="lock-button" disabled>解锁</button>
-                <button class="button" id="start-button" disabled>启动引擎</button>
-                <button class="button" id="trunk-button" disabled>打开尾箱</button>
-                <button class="button" id="find-car-button" disabled>寻车</button>
-                <button class="button" id="window-button" disabled>开窗</button>
+                <button class="button" id="lock-button">解锁</button>
+                <button class="button" id="start-button">启动引擎</button>
+                <button class="button" id="trunk-button">打开尾箱</button>
+                <button class="button" id="find-car-button">寻车</button>
+                <button class="button" id="window-button">开窗</button>
             </div>
         </div>
     </div>
