--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
         </div>
     </div>
-    <div id="offline-alert" class="offline-alert">设备离线</div>
+    <div id="offline-alert" class="offline-alert"></div>
     <div id="success-alert" class="success-alert"></div>
     <script src="index.js"></script>
 </body>
